@@ -3,8 +3,8 @@
 #' Calculates color distances. When data are the result of \code{\link{vismodel}}, 
 #' it applies the receptor-noise model of Vorobyev et al. (1998) to calculate color distances
 #' with noise based on relative photoreceptor densities. It also accepts \code{\link{colspace}} data 
-#' from the hexagon, colour-opponent-coding, categorical, and cielab models, in which case euclidean
-#' distances (hexagon, cielab, categorical) or manhattan distances (coc) are returned.
+#' from the hexagon, colour-opponent-coding, categorical, segment, and cielab models, in which case euclidean
+#' distances (hexagon, cielab, categorical, segment) or manhattan distances (coc) are returned.
 #' 
 #' @param modeldata (required) quantum catch color data. Can be the result
 #'  from \code{\link{vismodel}}, or \code{\link{colspace}}. Data may also be independently calculated quantum catches, 
@@ -41,19 +41,19 @@
 #'  (the empirically estimated value for the
 #'  LWS cone from \emph{Leiothrix lutea}). Ignored for \code{colspace} objects
 #'  if model is not a receptor noise model (i.e. hexagon, colour-opponent-coding, 
-#' categorical, and cielab models).
+#'  categorical, segment, and cielab models).
 #' @param weber.ref the cone class used to obtain the empirical estimate of the 
 #'  Weber fraction used for the \code{weber} argument. By default, \code{n4} is used, 
 #'  representing the LWS cone for \emph{Leiothrix lutea}. Ignored for \code{colspace} objects
 #'  if model is not a receptor noise model (i.e. hexagon, colour-opponent-coding, 
-#' categorical, and cielab models).
+#' categorical, segment, and cielab models).
 #' @param weber.achro the Weber fraction to be used to calculate achromatic contrast, when 
 #'  \code{achro = TRUE}. Defaults to 0.1. Ignored for \code{colspace} objects
 #'  if model is not a receptor noise model (i.e. hexagon, colour-opponent-coding, 
-#' categorical, and cielab models).
+#' categorical, segment, and cielab models).
 #' @param noise how the noise will be calculated. (Ignored for \code{colspace} objects
 #'  if model is not a receptor noise model (i.e. hexagon, colour-opponent-coding, 
-#' categorical, and cielab models)):
+#' categorical, segment, and cielab models)):
 #' \itemize{
 #' 	\item \code{neural}: noise is proportional to the Weber fraction and 
 #'  is independent of the intensity of the signal received (i.e. assumes bright conditions).
@@ -70,7 +70,7 @@
 #' The first two (\code{patch1, patch2}) refer
 #' to the two colors being contrasted; \code{dS} is the chromatic contrast (delta S)
 #' and \code{dL} is the achromatic contrast (delta L). Units are JND's in the receptor-noise
-#' model, euclidean distances in the categorical space, manhattan distances in the 
+#' model, euclidean distances in the categorical and segment space, manhattan distances in the 
 #' color-opponent-coding space, green-receptor contrast in the hexagon, and lightness (L) 
 #' contrast in the cielab model. 
 #'
